修改重构方式